--- a/Expense Tracker/wwwroot/css/site.css
+++ b/Expense Tracker/wwwroot/css/site.css
@@ -18,5 +18,11 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #12161d;
+    color: #fff;
+}
+
+.e-bigger {
+    font-size: x-large;
 }
