--- a/Expense Tracker/Views/Category/AddOrEdit.cshtml
+++ b/Expense Tracker/Views/Category/AddOrEdit.cshtml
@@ -10,8 +10,9 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="AddOrEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" name="CategoryId" value="CategoryId" />
             <div class="mb-3">
                 <div class='e-btn-group custom-rbt-group'>
                     <input type="radio" id="radioleft" name="Type" value="Expense" checked="@(Model.Type == "Expense")" />
