--- a/Expense Tracker/Views/Category/AddOrEdit.cshtml
+++ b/Expense Tracker/Views/Category/AddOrEdit.cshtml
@@ -18,11 +18,11 @@
                         <input type="radio" id="radiomiddle" name="Type" value="Income" checked="@(Model.Type == "Income")" />
                         <label class="e-btn" for="radiomiddle">Income</label>
                     </div>
-                    <span asp-validation-for="Type" class="text-danger"></span>
+                @*     <span asp-validation-for="Type" class="text-danger"></span> *@
                 </div>
                 <div class="form-group">
                     <ejs-textbox id="title" placeholder="Title" ejs-for="Title" floatLabelType="Always"></ejs-textbox>
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <span asp-validation-for="Title" class="text-danger fs-6"></span>
                 </div>
                 <div class="form-group">
                     <ejs-textbox id="icon" placeholder="Icon" ejs-for="Icon" floatLabelType="Always"></ejs-textbox>
@@ -40,7 +40,8 @@
     </div>
 </div>
 
-
+@* 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+ *@
