--- a/Expense Tracker/wwwroot/css/site.css
+++ b/Expense Tracker/wwwroot/css/site.css
@@ -150,3 +150,16 @@ body {
     text-decoration: none !important;
     color: inherit !important;
 }
+
+.main-content {
+    margin-left: 290px;
+    overflow-y: auto;
+    height: 92vh;
+}
+
+/*SideBar*/
+#sidebar {
+    background-color: #12161d;
+    border-right: 1px dashed rgba(75,82,85,0.24);
+    padding: 10px 20px;
+}
