--- a/Expense Tracker/wwwroot/css/site.css
+++ b/Expense Tracker/wwwroot/css/site.css
@@ -54,12 +54,6 @@ body {
     border: 1px solid #fff;
 }
 
-/*Widget*/
-.widget {
-    border-radius: 1rem;
-    background-color: #1a222b;
-}
-
 /*Grid*/
 .e-grid {
     border: 0;
@@ -163,3 +157,36 @@ body {
     border-right: 1px dashed rgba(75,82,85,0.24);
     padding: 10px 20px;
 }
+
+/*Widget*/
+.widget {
+    border-radius: 1rem;
+    background-color: #1a222b;
+}
+
+    .widget.summary > div:first-child {
+        background-color: #222b33;
+        padding: 1rem;
+        border-top-left-radius: 1rem;
+        border-bottom-left-radius: 1rem;
+    }
+
+        .widget.summary > div:first-child i {
+            font-weight: bold;
+        }
+
+    .widget.income > div:first-child {
+        color: #65da41;
+    }
+
+    .widget.expense > div:first-child {
+        color: #ff4e48;
+    }
+
+    .widget.balance > div:first-child {
+        color: #2aa1ff;
+    }
+
+    .widget.chart {
+        padding: 5px;
+    }
